contrast fix

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -2,7 +2,7 @@
     --text-color: black;
     --background-color: #A3CEF1;
     --hover-background-color: #27374D;    
-    --hover-color: #E7ECEF;
+    --hover-color: white;
     --section-background-color: #8B8C89;
 }
 
@@ -47,7 +47,7 @@ hr {
 }
 
 h1, h2, h3 {
-    color: #E7ECEF;
+    color: var(--text-color);
 }
 
 nav ul {
@@ -76,7 +76,7 @@ nav a {
 }
 
 nav a:hover {
-    color: white;
+    color: var(--hover-color);
     background-color: var(--hover-background-color);
     border: 1px solid white;
 }
@@ -226,4 +226,5 @@ h1 {
 
 footer {
     background-color: #274C77;
+    color: white;
 }
